# airflow-django

./: .gitignore  README.md  pyproject.toml
airflow_django/: operators.py
